deployment.yml
# =================================
# RabbitMQ Deployment
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq-container
          image: rabbitmq:3.13-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
# =================================
# Redis Deployment
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis-container
          image: redis:7
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
---
# =================================
# frontend Deployment
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petful-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petful-frontend
  template:
    metadata:
      labels:
        app: petful-frontend
    spec:
      containers:
        - name: petful-frontend-container
          image: gyongcode/petful-frontend:v0.0.48
          ports:
            - containerPort: 3000

---
# =================================
# Config Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service-container
          image: gyongcode/petful-config-service:v0.0.36
          volumeMounts:
            - name: keystore-volume
              mountPath: "/app/secrets"
              readOnly: true
          ports:
            - containerPort: 8888
      volumes:
        - name: keystore-volume
          secret:
            secretName: keystore-secrets

---
# =================================
# Discovery Service (Eureka)
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service-container
          image: gyongcode/petful-discovery-service:v0.0.36
          ports:
            - containerPort: 8761
---
# =================================
# Gateway Service (API Gateway)
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service-container
          image: gyongcode/petful-gateway-service:v0.0.36
          ports:
            - containerPort: 8000
---
# =================================
# Business Services
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: gyongcode/petful-user-service:v0.0.36
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-service
  template:
    metadata:
      labels:
        app: pet-service
    spec:
      containers:
        - name: pet-service-container
          image: gyongcode/petful-pet-service:v0.0.36
          ports:
            - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
        - name: community-service-container
          image: gyongcode/petful-community-service:v0.0.36
          ports:
            - containerPort: 8083
---
# =================================
# Advertiser Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advertiser-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: advertiser-service
  template:
    metadata:
      labels:
        app: advertiser-service
    spec:
      containers:
        - name: advertiser-service-container
          image: gyongcode/petful-advertiser-service:v0.0.36
          ports:
            - containerPort: 8084
---
# =================================
# Campaign Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campaign-service
  template:
    metadata:
      labels:
        app: campaign-service
    spec:
      containers:
        - name: campaign-service-container
          image: gyongcode/petful-campaign-service:v0.0.36
          ports:
            - containerPort: 8085
---
# =================================
# Health Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-service
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
        - name: health-service-container
          image: gyongcode/petful-health-service:v0.0.36
          ports:
            - containerPort: 8086
---
# =================================
# Notification Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service-container
          image: gyongcode/petful-notification-service:v0.0.36
          ports:
            - containerPort: 8087
---
# =================================
# SNS Service
# =================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sns-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sns-service
  template:
    metadata:
      labels:
        app: sns-service
    spec:
      containers:
        - name: sns-service-container
          image: gyongcode/petful-sns-service:v0.0.36
          ports:
            - containerPort: 8088
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-service-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation-service
  template:
    metadata:
      labels:
        app: recommendation-service
    spec:
      containers:
        - name: recommendation-service-container
          image: gyongcode/petful-recommendation-service:v0.0.32
          ports:
            - containerPort: 8000
